--- a/templates/courbes.html
+++ b/templates/courbes.html
@@ -6,18 +6,29 @@
         <title>Foyer Bourse</title>
         <link rel="icon" href="{{url_for('static', filename='images/logo.jpg')}}">
         <script>
-            
             var timeleft = localStorage.getItem("time_left") || {{time_left}};
-            var downloadTimer = setInterval(function(){
-                timeleft--;
-                var seconds = timeleft % 60;
-                var minutes = Math.floor(timeleft / 60);
-                document.getElementById("countdown").textContent = minutes + " minutes " + seconds + " secondes";
-                localStorage.setItem("time_left", timeleft);
-                if(timeleft <= 0)
-                    clearInterval(downloadTimer);
-            },1000);
-            localStorage.clear()
+
+            function startTimer() {
+                var downloadTimer = setInterval(function(){
+                    timeleft--;
+                    var seconds = timeleft % 60;
+                    var minutes = Math.floor(timeleft / 60);
+                    document.getElementById("countdown").textContent = minutes + " minutes " + seconds + " secondes";
+                    localStorage.setItem("time_left", timeleft);
+                    if(timeleft <= 0) {
+                        clearInterval(downloadTimer);
+                        timeleft = {{time_left}};
+                        fetch('/countdown-finished')
+                        .then(response => response.text())
+                        .then(data => {
+                            console.log(data);
+                        });
+                        startTimer();
+                    }
+                },1000);
+                localStorage.clear();
+            }
+            startTimer();
         </script>
     </head>
 
@@ -25,7 +36,7 @@
         <header>
             <div class="block">
                 <div>
-                    <p class="head_box">Courbes des prix</p> 
+                    <p class="head_box">Courbes des prix</p>
                 </div>
             </div>
         </header>
@@ -41,6 +52,7 @@
                 </div>
             </div>
         </section>
+
         <form method="POST" action="courbes" class="block">
             <select name="selected_plot">
                 <option value="all">toutes les bières</option>
